--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+  <script src="https://api-maps.yandex.ru/2.1/?suggest_apikey=8d2ede86-d863-476a-a400-fe76cf772fa1&lang=en"
+    type="text/javascript"></script>
+  <script src="suggest.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -20,7 +23,7 @@
     <section class="card">
       <h2 class="visually-hidden">City search</h2>
       <div class="card__search">
-        <input class="card__input" type="text" placeholder="Enter city name" spellcheck="false">
+        <input class="card__input" type="text" placeholder="Enter city name" spellcheck="false" id="suggest">
         <button class="card__search-btn">
           <img class="card__search-image" src="images/search.png" alt="search icon" width="40" height="45">
         </button>
@@ -53,6 +56,9 @@
       </div>
     </section>
   </div>
+
+
+
   <script src="weather.js"></script>
 </body>
 
